--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
 			<div class="window">
 				<div class="film">
 					<div class="group">
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
-						<a></a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
 					</div>
 				</div>
 			</div>
