styling: randomized tile background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<nav class="page-header">
 				<h1 class="title">Start</h1>
 			</nav>
-			<div class="window">
+			<div class="window" id="window">
 				<div class="film">
 					<div class="group">
 						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
