layout: text-overflow and minor RWD improvements

--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
 			<div class="window" id="window">
 				<div class="film">
 					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+					</div>
+					<div class="group">
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
 					</div>
 					<div class="group">
 						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-					</div>
-					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</body>
+	<script src="index.js"></script>
 </html>
-<script src="index.js"></script>
