RWD: responsive rows

--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
 			<div class="window" id="window">
 				<div class="film">
 					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-					</div>
-					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
 					</div>
 					<div class="group">
 						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
