layout: tile bg & hover effects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Subway Demo</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
-		<link rel="stylesheet" href="index.css"/>
+		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
 		<div class="content">
@@ -14,25 +14,68 @@
 			<div class="window" id="window">
 				<div class="film">
 					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/flower.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/cloud.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/flower.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/cloud.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/flower.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/cloud.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/flower.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
 					</div>
 					<div class="group">
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
-						<a href="https://cn.bing.com" target="_blank">Lorem ipsum dolor sit amet</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/seat.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/rainy.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/seat.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/rainy.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/seat.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/rainy.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/seat.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
+						<a class="tile" href="https://cn.bing.com" target="_blank">
+							<img src="assets/rainy.png" class="tile-bg"/>
+							<div class="tile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+						</a>
 					</div>
 				</div>
 			</div>
