--- a/post.html
+++ b/post.html
@@ -25,6 +25,7 @@
 						<p>Fusce congue risus et nulla iaculis, hendrerit dignissim felis lobortis. Suspendisse rhoncus eleifend arcu at pretium. Nunc justo lectus, fringilla finibus ultrices eget, auctor nec libero. Ut vel ante porta, sollicitudin ex nec, commodo nunc. In ante justo, pulvinar non quam sed, mollis condimentum risus. Donec a libero scelerisque, facilisis leo eu, vehicula libero. Vivamus sit amet sagittis orci. Suspendisse fringilla a mauris ac efficitur. Fusce eu euismod ligula, ut iaculis tortor. Suspendisse sed mauris sit amet turpis posuere dapibus sit amet at turpis. Duis sed turpis est. Suspendisse at volutpat dolor. Proin feugiat mauris eros, sit amet accumsan dolor feugiat vitae. </p>
 						<p><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></p>
 						<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p></blockquote>
+						<p>You can use <strong>bold</strong> font and <span class="italic">italic</span> font to emphasize text.</p>
 					</article>
 				</main>
 			</div>
