todo & img alt title

--- a/post.html
+++ b/post.html
@@ -15,7 +15,7 @@
 					<span class="date">May 1, 2024</span>
 				</nav>
 				<article>
-					<p><img src="assets/seat.png" loading="lazy" alt="Lorem ipsum dolor sit amet"/></p>
+					<p><img src="assets/seat.png" loading="lazy" alt="A seat in a classroom" title="A seat in a classroom"/></p>
 					<h1>Heading 1</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros. Sed orci metus, lobortis sed tempus id, pharetra a ligula. In ullamcorper libero commodo nisi bibendum, eu dapibus libero fringilla. Praesent egestas, ipsum nec facilisis efficitur, diam lorem cursus diam, nec dignissim odio sem vitae lorem. Nulla eu tristique tellus, ut imperdiet nibh. Phasellus mi felis, eleifend at leo imperdiet, hendrerit scelerisque nunc. Suspendisse potenti. Pellentesque neque quam, blandit in ante nec, viverra dictum sapien. Sed turpis felis, blandit non fringilla id, vehicula quis justo. </p>
 					<h2>Heading 2</h2>
