--- a/post.html
+++ b/post.html
@@ -37,6 +37,24 @@
 					</ul>
 					<hr/>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
+					<table>
+						<thead>
+							<tr>
+								<th>title</th>
+								<th>description</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>foo</td>
+								<td>bar</td>
+							</tr>
+							<tr>
+								<td>fee</td>
+								<td>boe</td>
+							</tr>
+						</tbody>
+					</table>
 				</article>
 			</main>
 		</div>
