--- a/post.html
+++ b/post.html
@@ -17,13 +17,11 @@
 				<article>
 					<p><img src="assets/seat.png" loading="lazy" alt="A seat in a classroom" title="A seat in a classroom"/></p>
 					<h1>Heading 1</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros. Sed orci metus, lobortis sed tempus id, pharetra a ligula. In ullamcorper libero commodo nisi bibendum, eu dapibus libero fringilla. Praesent egestas, ipsum nec facilisis efficitur, diam lorem cursus diam, nec dignissim odio sem vitae lorem. Nulla eu tristique tellus, ut imperdiet nibh. Phasellus mi felis, eleifend at leo imperdiet, hendrerit scelerisque nunc. Suspendisse potenti. Pellentesque neque quam, blandit in ante nec, viverra dictum sapien. Sed turpis felis, blandit non fringilla id, vehicula quis justo. </p>
 					<h2>Heading 2</h2>
-					<p>Suspendisse potenti. Integer purus massa, commodo ac posuere ac, ullamcorper egestas augue. Integer rutrum felis sem, eu bibendum tortor sollicitudin sit amet. Vestibulum eget gravida libero, et iaculis felis. Aliquam rhoncus orci blandit turpis aliquet molestie. Praesent posuere velit nulla, a laoreet lorem sagittis in. Vestibulum ac mollis ex. Suspendisse potenti.</p>
 					<h3>Heading 3</h3>
-					<p>Fusce congue risus et nulla iaculis, hendrerit dignissim felis lobortis. Suspendisse rhoncus eleifend arcu at pretium. Nunc justo lectus, fringilla finibus ultrices eget, auctor nec libero. Ut vel ante porta, sollicitudin ex nec, commodo nunc. In ante justo, pulvinar non quam sed, mollis condimentum risus. Donec a libero scelerisque, facilisis leo eu, vehicula libero. Vivamus sit amet sagittis orci. Suspendisse fringilla a mauris ac efficitur. Fusce eu euismod ligula, ut iaculis tortor. Suspendisse sed mauris sit amet turpis posuere dapibus sit amet at turpis. Duis sed turpis est. Suspendisse at volutpat dolor. Proin feugiat mauris eros, sit amet accumsan dolor feugiat vitae. </p>
 					<p><a href="https://example.com" target="_blank">Example Domain</a></p>
-					<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p></blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
+				<blockquote><p>Suspendisse potenti. Integer purus massa, commodo ac posuere ac, ullamcorper egestas augue. Integer rutrum felis sem, eu bibendum tortor sollicitudin sit amet. Vestibulum eget gravida libero, et iaculis felis. Aliquam rhoncus orci blandit turpis aliquet molestie. Praesent posuere velit nulla, a laoreet lorem sagittis in. Vestibulum ac mollis ex. Suspendisse potenti.</p></blockquote>
 					<p>You can use <strong>bold</strong> font and <i>italic</i> font to emphasize text. Run <code>nixos-rebuild boot</code> if you want to reconfigure your NixOS machine.</p>
 					<ol>
 						<li>First item</li>
@@ -36,7 +34,6 @@
 						<li>Third item</li>
 					</ul>
 					<hr/>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
 					<table>
 						<thead>
 							<tr>
@@ -55,6 +52,12 @@
 							</tr>
 						</tbody>
 					</table>
+					<dl>
+						<dt>shell</dt>
+						<dd>A program through which a person interacts with a computer.</dd>
+						<dd>A command-line interface where you can type commands.</dd>
+					</dl>
+					<p><del>The world is flat.</del></p>
 				</article>
 			</main>
 		</div>
