code fence & task list

--- a/post.html
+++ b/post.html
@@ -58,6 +58,17 @@
 						<dd>A command-line interface where you can type commands.</dd>
 					</dl>
 					<p><del>The world is flat.</del></p>
+					<ul>
+						<li>
+							<input checked disabled type="checkbox"/>
+							Write a demo site
+						</li>
+						<li>
+							<input disabled type="checkbox"/>
+							Transform demo into a hexo theme
+						</li>
+					</ul>
+<figure class="highlight text"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br></pre></td><td class="code"><pre><span class="line">#include &lt;stdio.h&gt;</span><br><span class="line"></span><br><span class="line">int main(void) &#123;</span><br><span class="line">    printf(&quot;hello world&quot;);</span><br><span class="line">    return 0;</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
 				</article>
 			</main>
 		</div>
