overlay navigation: basics

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 		<link rel="stylesheet" href="css/index.css"/>
 	</head>
 	<body>
-		<div class="content">
+		<div id="navigation"></div>
+		<div id="content">
 			<nav>
 				<h1 class="title">Start</h1>
+				<div class="separator"></div>
+				<button id="navigationEnter">Navigation</button>
 			</nav>
 			<div class="window">
 				<div class="film">
@@ -22,4 +25,5 @@
 			</div>
 		</div>
 	</body>
+	<script type="text/javascript" src="js/navigation.js"></script>
 </html>
