--- a/post.html
+++ b/post.html
@@ -8,11 +8,16 @@
 		<link rel="stylesheet" href="css/post.css"/>
 	</head>
 	<body>
-		<div class="content">
+		<div id="navigation"></div>
+		<div id="content">
 			<main>
 				<nav>
-					<h1 class="title">Lorem ipsum dolor sit amet</h1>
-					<span class="date">May 1, 2024</span>
+					<div class="title-wrapper">
+						<h1 class="title">Lorem ipsum dolor sit amet</h1>
+						<span class="date">May 1, 2024</span>
+					</div>
+					<div class="separator"></div>
+					<button id="navigationEnter">Navigation</button>
 				</nav>
 				<article>
 					<p><img src="assets/seat.png" loading="lazy" alt="A seat in a classroom" title="A seat in a classroom"/></p>
@@ -20,8 +25,8 @@
 					<h2>Heading 2</h2>
 					<h3>Heading 3</h3>
 					<p><a href="https://example.com" target="_blank">Example Domain</a></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
-				<blockquote><p>Suspendisse potenti. Integer purus massa, commodo ac posuere ac, ullamcorper egestas augue. Integer rutrum felis sem, eu bibendum tortor sollicitudin sit amet. Vestibulum eget gravida libero, et iaculis felis. Aliquam rhoncus orci blandit turpis aliquet molestie. Praesent posuere velit nulla, a laoreet lorem sagittis in. Vestibulum ac mollis ex. Suspendisse potenti.</p></blockquote>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
+					<blockquote><p>Suspendisse potenti. Integer purus massa, commodo ac posuere ac, ullamcorper egestas augue. Integer rutrum felis sem, eu bibendum tortor sollicitudin sit amet. Vestibulum eget gravida libero, et iaculis felis. Aliquam rhoncus orci blandit turpis aliquet molestie. Praesent posuere velit nulla, a laoreet lorem sagittis in. Vestibulum ac mollis ex. Suspendisse potenti.</p></blockquote>
 					<p>You can use <strong>bold</strong> font and <i>italic</i> font to emphasize text. Run <code>nixos-rebuild boot</code> if you want to reconfigure your NixOS machine.</p>
 					<ol>
 						<li>First item</li>
@@ -73,4 +78,5 @@
 			</main>
 		</div>
 	</body>
+	<script type="text/javascript" src="js/navigation.js"></script>
 </html>
