compatibility quick fixes

--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Lorem ipsum dolor sit amet</title>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width"/>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="css/base.css"/>
 		<link rel="stylesheet" href="css/post.css"/>
 	</head>
@@ -27,7 +27,7 @@
 					<p><a href="https://example.com" target="_blank">Example Domain</a></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam varius elementum quam id lacinia. Pellentesque sed mi lobortis, sodales augue sed, pulvinar nisl. Fusce ultricies dictum nulla, eget tempor orci rhoncus non. Etiam vestibulum gravida suscipit. Pellentesque eu felis at diam pharetra fringilla a vel eros.</p>
 					<blockquote><p>Suspendisse potenti. Integer purus massa, commodo ac posuere ac, ullamcorper egestas augue. Integer rutrum felis sem, eu bibendum tortor sollicitudin sit amet. Vestibulum eget gravida libero, et iaculis felis. Aliquam rhoncus orci blandit turpis aliquet molestie. Praesent posuere velit nulla, a laoreet lorem sagittis in. Vestibulum ac mollis ex. Suspendisse potenti.</p></blockquote>
-					<p>You can use <strong>bold</strong> font and <i>italic</i> font to emphasize text. Run <code>nixos-rebuild boot</code> if you want to reconfigure your NixOS machine.</p>
+					<p>You can use <strong>bold</strong> font and <em>italic</em> font to emphasize text. Run <code>nixos-rebuild boot</code> if you want to reconfigure your NixOS machine.</p>
 					<ol>
 						<li>First item</li>
 						<li>Second item</li>
