--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Subway Demo</title>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width"/>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="css/base.css"/>
 		<link rel="stylesheet" href="css/index.css"/>
 	</head>
