--- a/post.html
+++ b/post.html
@@ -18,7 +18,7 @@
 					<div class="separator"></div>
 					<button id="navigationToggle" data-inactive="Navigation" data-active="Exit"></button>
 				</nav>
-				<div id="content">
+				<div>
 					<div id="navigation">
 						<ul id="siteLinks">
 							<li class="prepared"><a href="/">Home</a></li>
@@ -26,7 +26,7 @@
 							<li class="prepared"><a href="/">About</a></li>
 						</ul>
 					</div>
-					<article>
+					<article id="contents">
 						<p><img src="assets/seat.png" loading="lazy" alt="A seat in a classroom" title="A seat in a classroom"/></p>
 						<h1>Heading 1</h1>
 						<h2>Heading 2</h2>
