--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav>
 				<h1 class="title">Start</h1>
 				<div class="separator"></div>
-				<button id="navigationToggle" data-inactive="Navigation" data-active="Exit"></button>
+				<button id="navigationToggle"></button>
 			</nav>
 			<div>
 				<div id="navigation">
