--- a/post.html
+++ b/post.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html>
+<!doctype html> <html>
 	<head>
 		<title>Lorem ipsum dolor sit amet</title>
 		<meta charset="utf-8"/>
@@ -16,7 +15,7 @@
 						<span class="date">May 1, 2024</span>
 					</div>
 					<div class="separator"></div>
-					<button id="navigationToggle" data-inactive="Navigation" data-active="Exit"></button>
+					<button id="navigationToggle"></button>
 				</nav>
 				<div>
 					<div id="navigation">
