--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<h1 class="title">Subway Prototype</h1>
 					</div>
 					<div class="separator"></div>
-					<button id="navigationToggle" class="centerSelf"></button>
+					<button id="navigationToggle"></button>
 				</nav>
 				<main>
 					<div id="navigation">
