--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
 						<span class="date">May 1, 2024</span>
 					</div>
 					<div class="separator"></div>
-					<button id="navigationToggle" class="centerSelf"></button>
+					<button id="navigationToggle"></button>
 				</nav>
 				<main>
 					<div id="navigation">
